--- a/jsonResultsCreator.ipynb
+++ b/jsonResultsCreator.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "Untitled0"
+  "name": "jsonResultsCreator"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -16,13 +16,14 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 67
+     "prompt_number": 55
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "import pprint\n",
+      "import copy\n",
       "pp = pprint.PrettyPrinter(indent=2)\n",
       "\n",
       "analysis = {'name': 'testAnalysis', 'date': '10/22/2032', 'sites': []}\n",
@@ -40,9 +41,9 @@
       "result3 = {'type': 'hidden', 'words': []}\n",
       "\n",
       "for site in analysis['sites']:\n",
-      "    site['results'].append(result1)\n",
-      "    site['results'].append(result2)\n",
-      "    site['results'].append(result3)\n",
+      "    site['results'].append(copy.copy(result1))\n",
+      "    site['results'].append(copy.copy(result2))\n",
+      "    site['results'].append(copy.copy(result3))\n",
       "\n",
       "page = {'page': 'http://www.somesite.com/happyendings', 'count': 562}\n",
       "tag = {'tag': 'a', 'count': 342}\n",
@@ -57,7 +58,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 68
+     "prompt_number": 56
     },
     {
      "cell_type": "code",
@@ -88,39 +89,44 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 69
+     "prompt_number": 57
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "for site in analysis['sites']:\n",
-      "    for result in site['results']:\n",
-      "        if result['type'] == 'visible':\n",
+      "    \n",
+      "    if site['url'] == 'http://www.somesiteOne.com':\n",
+      "        for result in site['results']:\n",
       "            result['words'] = words1\n",
-      "        elif result['type'] == 'headlines':\n",
+      "            \n",
+      "    if site['url'] == 'http://www.somesiteTwo.com':\n",
+      "        for result in site['results']:\n",
       "            result['words'] = words2\n",
-      "        else:\n",
-      "            result['words'] = words3\n"
+      "\n",
+      "    if site['url'] == 'http://www.somesiteThree.com':\n",
+      "        for result in site['results']:\n",
+      "            result['words'] = words3"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 70
+     "prompt_number": 58
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "import json\n",
-      "f = open('results.json', 'w')\n",
+      "f = open('results1.json', 'w')\n",
       "json.dump(analysis, f)\n",
       "f.close()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 73
+     "prompt_number": 59
     },
     {
      "cell_type": "code",
