tried directive for analysis box, big fail, text splashdown finished

--- a/jsonResultsCreator.ipynb
+++ b/jsonResultsCreator.ipynb
@@ -16,117 +16,322 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 55
+     "prompt_number": 62
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# Set up overall json structure for the analysis\n",
+      "\n",
       "import pprint\n",
       "import copy\n",
       "pp = pprint.PrettyPrinter(indent=2)\n",
       "\n",
-      "analysis = {'name': 'testAnalysis', 'date': '10/22/2032', 'sites': []}\n",
+      "analysis = {'name': 'testAnalysis', \n",
+      "            'date': '10/22/2032', \n",
+      "            'internal': True,\n",
+      "            'external': True,\n",
+      "            'sites': []}\n",
       "\n",
-      "site1 = {'url': 'http://www.somesiteOne.com', 'results': []}\n",
-      "site2 = {'url': 'http://www.somesiteTwo.com', 'results': []}\n",
-      "site3 = {'url': 'http://www.somesiteThree.com', 'results': []}\n",
+      "site1 = {'url': 'http://www.somesiteOne.com', 'externalResults': {}, 'internalResults': {}}\n",
+      "site2 = {'url': 'http://www.somesiteTwo.com', 'externalResults': {}, 'internalResults': {}}\n",
+      "site3 = {'url': 'http://www.somesiteThree.com', 'externalResults': {}, 'internalResults': {}}\n",
       "\n",
       "analysis['sites'].append(site1)\n",
       "analysis['sites'].append(site2)\n",
       "analysis['sites'].append(site3)\n",
       "\n",
-      "result1 = {'type': 'visible', 'words': []}\n",
-      "result2 = {'type': 'headlines', 'words': []}\n",
-      "result3 = {'type': 'hidden', 'words': []}\n",
+      "results = {'visibleText': {}, 'hiddenText': {}, 'headlineText': {},\n",
+      "           'allLinks': {}, 'externalDomains': {}, 'linkText': {},\n",
+      "           'searchWords': {}, 'context': {},\n",
+      "           'synonymRings': {}, 'totals': {} }\n",
       "\n",
       "for site in analysis['sites']:\n",
-      "    site['results'].append(copy.copy(result1))\n",
-      "    site['results'].append(copy.copy(result2))\n",
-      "    site['results'].append(copy.copy(result3))\n",
+      "    site['internalResults'] = copy.deepcopy(results)\n",
+      "    site['externalResults'] = copy.deepcopy(results)\n",
       "\n",
-      "page = {'page': 'http://www.somesite.com/happyendings', 'count': 562}\n",
-      "tag = {'tag': 'a', 'count': 342}\n",
-      "\n",
-      "pages = []\n",
-      "tags = []\n",
-      "\n",
-      "for i in range(10):\n",
-      "    pages.append(page)\n",
-      "    tags.append(tag)\n"
+      "pp.pprint(analysis)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 56
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "{ 'date': '10/22/2032',\n",
+        "  'external': True,\n",
+        "  'internal': True,\n",
+        "  'name': 'testAnalysis',\n",
+        "  'sites': [ { 'externalResults': { 'allLinks': { },\n",
+        "                                    'context': { },\n",
+        "                                    'externalDomains': { },\n",
+        "                                    'headlineText': { },\n",
+        "                                    'hiddenText': { },\n",
+        "                                    'linkText': { },\n",
+        "                                    'searchWords': { },\n",
+        "                                    'synonymRings': { },\n",
+        "                                    'totals': { },\n",
+        "                                    'visibleText': { }},\n",
+        "               'internalResults': { 'allLinks': { },\n",
+        "                                    'context': { },\n",
+        "                                    'externalDomains': { },\n",
+        "                                    'headlineText': { },\n",
+        "                                    'hiddenText': { },\n",
+        "                                    'linkText': { },\n",
+        "                                    'searchWords': { },\n",
+        "                                    'synonymRings': { },\n",
+        "                                    'totals': { },\n",
+        "                                    'visibleText': { }},\n",
+        "               'url': 'http://www.somesiteOne.com'},\n",
+        "             { 'externalResults': { 'allLinks': { },\n",
+        "                                    'context': { },\n",
+        "                                    'externalDomains': { },\n",
+        "                                    'headlineText': { },\n",
+        "                                    'hiddenText': { },\n",
+        "                                    'linkText': { },\n",
+        "                                    'searchWords': { },\n",
+        "                                    'synonymRings': { },\n",
+        "                                    'totals': { },\n",
+        "                                    'visibleText': { }},\n",
+        "               'internalResults': { 'allLinks': { },\n",
+        "                                    'context': { },\n",
+        "                                    'externalDomains': { },\n",
+        "                                    'headlineText': { },\n",
+        "                                    'hiddenText': { },\n",
+        "                                    'linkText': { },\n",
+        "                                    'searchWords': { },\n",
+        "                                    'synonymRings': { },\n",
+        "                                    'totals': { },\n",
+        "                                    'visibleText': { }},\n",
+        "               'url': 'http://www.somesiteTwo.com'},\n",
+        "             { 'externalResults': { 'allLinks': { },\n",
+        "                                    'context': { },\n",
+        "                                    'externalDomains': { },\n",
+        "                                    'headlineText': { },\n",
+        "                                    'hiddenText': { },\n",
+        "                                    'linkText': { },\n",
+        "                                    'searchWords': { },\n",
+        "                                    'synonymRings': { },\n",
+        "                                    'totals': { },\n",
+        "                                    'visibleText': { }},\n",
+        "               'internalResults': { 'allLinks': { },\n",
+        "                                    'context': { },\n",
+        "                                    'externalDomains': { },\n",
+        "                                    'headlineText': { },\n",
+        "                                    'hiddenText': { },\n",
+        "                                    'linkText': { },\n",
+        "                                    'searchWords': { },\n",
+        "                                    'synonymRings': { },\n",
+        "                                    'totals': { },\n",
+        "                                    'visibleText': { }},\n",
+        "               'url': 'http://www.somesiteThree.com'}]}\n"
+       ]
+      }
+     ],
+     "prompt_number": 78
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# Set up dummy pages and tags to be attached to each word in \"words\" list\n",
+      "# and dummy words to be attached to each link and domain (along with pages)\n",
+      "# and dummy links to be attached to each domain\n",
+      "\n",
+      "page = {'page': 'http://www.somesite.com/happyendings', 'count': 562}\n",
+      "tag = {'tag': 'a', 'count': 342}\n",
+      "words = {'words': 'A fantastic link title', 'count': 27}\n",
+      "link = {'link': 'http://www.somesite.com/linktonowhere', 'count': 22}\n",
+      "\n",
+      "pages = []\n",
+      "tags = []\n",
+      "wordsList = []\n",
+      "links = []\n",
+      "\n",
+      "for i in range(10):\n",
+      "    pages.append(page)\n",
+      "    tags.append(tag)\n",
+      "    wordsList.append(words)\n",
+      "    links.append(link)\n",
+      "    \n",
+      "#pp.pprint(links)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 64
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Set up 3 different \"words\" lists with 120 words for both internal and external\n",
+      "# and 3 different links and domains with 120 links/domains for both internal and external\n",
+      "# and specific searchwords and wordnets\n",
+      "\n",
       "words1 = []\n",
       "words2 = []\n",
       "words3 = []\n",
       "\n",
-      "for i in range(120):\n",
-      "    word = 'hello' + str(i+1)\n",
-      "    rank = i + 1\n",
-      "    count = 50000 - (i * 400)\n",
-      "    words1.append({'word':word, 'rank':rank, 'count':count, 'pages':pages, 'tags':tags})\n",
+      "exwords1 = []\n",
+      "exwords2 = []\n",
+      "exwords3 = []\n",
+      "\n",
+      "links1 = []\n",
+      "links2 = []\n",
+      "links3 = []\n",
+      "\n",
+      "exlinks1 = []\n",
+      "exlinks2 = []\n",
+      "exlinks3 = []\n",
+      "\n",
+      "domains1 = []\n",
+      "domains2 = []\n",
+      "domains3 = []\n",
+      "\n",
+      "exdomains1 = []\n",
+      "exdomains2 = []\n",
+      "exdomains3 = []\n",
+      "\n",
+      "# searchwords and wordnets don't change between external/internal\n",
+      "searchwords = []\n",
+      "wordnets = []\n",
       "\n",
       "for i in range(120):\n",
-      "    word = 'hello' + str(i+41)\n",
-      "    rank = i + 1\n",
-      "    count = 50000 - (i * 400)\n",
-      "    words2.append({'word':word, 'rank':rank, 'count':count, 'pages':pages, 'tags':tags})\n",
       "    \n",
-      "for i in range(120):\n",
-      "    word = 'hello' + str(i+81)\n",
+      "    word1 = 'hello' + str(i+1)\n",
+      "    word2 = 'hello' + str(i+41)\n",
+      "    word3 = 'hello' + str(i+81)\n",
+      "    \n",
+      "    exword1 = 'exhello' + str(i+1)\n",
+      "    exword2 = 'exhello' + str(i+41)\n",
+      "    exword3 = 'exhello' + str(i+81)\n",
+      "    \n",
+      "    link1 = 'http://www.site.com/path' + str(i+1)\n",
+      "    link2 = 'http://www.site.com/path' + str(i+41)\n",
+      "    link3 = 'http://www.site.com/path' + str(i+81)\n",
+      "    \n",
+      "    exlink1 = 'http://www.exsite.com/path' + str(i+1)\n",
+      "    exlink2 = 'http://www.exsite.com/path' + str(i+41)\n",
+      "    exlink3 = 'http://www.exsite.com/path' + str(i+81)\n",
+      "    \n",
+      "    domain1 = 'http://www.site' + str(i+1) + '.com'\n",
+      "    domain2 = 'http://www.site' + str(i+41) + '.com'\n",
+      "    domain3 = 'http://www.site' + str(i+81) + '.com'\n",
+      "    \n",
+      "    exdomain1 = 'http://www.exsite' + str(i+1) + '.com'\n",
+      "    exdomain2 = 'http://www.exsite' + str(i+41) + '.com'\n",
+      "    exdomain3 = 'http://www.exsite' + str(i+81) + '.com'\n",
+      "    \n",
       "    rank = i + 1\n",
       "    count = 50000 - (i * 400)\n",
-      "    words3.append({'word':word, 'rank':rank, 'count':count, 'pages':pages, 'tags':tags})"
+      "    \n",
+      "    words1.append({'word':word1, 'rank':rank, 'count':count, 'pages':pages, 'tags':tags})\n",
+      "    words2.append({'word':word2, 'rank':rank, 'count':count, 'pages':pages, 'tags':tags})\n",
+      "    words3.append({'word':word3, 'rank':rank, 'count':count, 'pages':pages, 'tags':tags})\n",
+      "    \n",
+      "    exwords1.append({'word':exword1, 'rank':rank, 'count':count, 'pages':pages, 'tags':tags})\n",
+      "    exwords2.append({'word':exword2, 'rank':rank, 'count':count, 'pages':pages, 'tags':tags})\n",
+      "    exwords3.append({'word':exword3, 'rank':rank, 'count':count, 'pages':pages, 'tags':tags})\n",
+      "    \n",
+      "    links1.append({'link':link1, 'rank':rank, 'count':count, 'pages':pages, 'words':wordsList})\n",
+      "    links2.append({'link':link2, 'rank':rank, 'count':count, 'pages':pages, 'words':wordsList})\n",
+      "    links3.append({'link':link3, 'rank':rank, 'count':count, 'pages':pages, 'words':wordsList})\n",
+      "    \n",
+      "    exlinks1.append({'link':exlink1, 'rank':rank, 'count':count, 'pages':pages, 'words':wordsList})\n",
+      "    exlinks2.append({'link':exlink2, 'rank':rank, 'count':count, 'pages':pages, 'words':wordsList})\n",
+      "    exlinks3.append({'link':exlink3, 'rank':rank, 'count':count, 'pages':pages, 'words':wordsList})\n",
+      "\n",
+      "    domains1.append({'domain':domain1, 'rank':rank, 'count':count, 'pages':pages, 'words':wordsList, 'links':links})\n",
+      "    domains2.append({'domain':domain2, 'rank':rank, 'count':count, 'pages':pages, 'words':wordsList, 'links':links})\n",
+      "    domains3.append({'domain':domain3, 'rank':rank, 'count':count, 'pages':pages, 'words':wordsList, 'links':links})\n",
+      "    \n",
+      "    exdomains1.append({'domain':exdomain1, 'rank':rank, 'count':count, 'pages':pages, 'words':wordsList, 'links':links})\n",
+      "    exdomains2.append({'domain':exdomain2, 'rank':rank, 'count':count, 'pages':pages, 'words':wordsList, 'links':links})\n",
+      "    exdomains3.append({'domain':exdomain3, 'rank':rank, 'count':count, 'pages':pages, 'words':wordsList, 'links':links})\n",
+      "\n",
+      "# Create search words\n",
+      "searchWord1 = {'word': 'searchWord1', 'count': 23000, 'pages':pages, 'tags':tags}\n",
+      "searchWord2 = {'word': 'searchWord2', 'count': 15000, 'pages':pages, 'tags':tags}\n",
+      "searchWord3 = {'word': 'searchWord3', 'count': 5000, 'pages':pages, 'tags':tags}\n",
+      "searchwords = [searchWord1, searchWord2, searchWord3]\n",
+      "\n",
+      "wordNet1 = {'net': 'wordNet1', 'count': 23000, 'pages':pages, 'tags':tags}\n",
+      "wordNet2 = {'net': 'wordNet2', 'count': 15000, 'pages':pages, 'tags':tags}\n",
+      "wordNet3 = {'net': 'wordNet3', 'count': 5000, 'pages':pages, 'tags':tags}\n",
+      "wordnets = [wordNet1, wordNet2, wordNet3]\n",
+      "\n",
+      "#pp.pprint(exsearchwords)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 57
+     "prompt_number": 77
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "for site in analysis['sites']:\n",
-      "    \n",
-      "    if site['url'] == 'http://www.somesiteOne.com':\n",
-      "        for result in site['results']:\n",
-      "            result['words'] = words1\n",
-      "            \n",
-      "    if site['url'] == 'http://www.somesiteTwo.com':\n",
-      "        for result in site['results']:\n",
-      "            result['words'] = words2\n",
+      "# Place values into internal and external results for all sites\n",
       "\n",
-      "    if site['url'] == 'http://www.somesiteThree.com':\n",
-      "        for result in site['results']:\n",
-      "            result['words'] = words3"
+      "sites = [analysis['sites'][0], analysis['sites'][1], analysis['sites'][2]]\n",
+      "results = ['internalResults', 'externalResults']\n",
+      "i = 1\n",
+      "\n",
+      "for site in sites:\n",
+      "    for result in results:\n",
+      "        \n",
+      "        if result == \"internalResults\":\n",
+      "            ex = \"\"\n",
+      "        else:\n",
+      "            ex = \"ex\"\n",
+      "            \n",
+      "        site[result]['visibleText']['words'] = eval( ex + 'words' + str(i) )\n",
+      "        site[result]['hiddenText']['words'] = eval( ex + 'words' + str(i) )\n",
+      "        site[result]['headlineText']['words'] = eval( ex + 'words' + str(i) )\n",
+      "        \n",
+      "        site[result]['linkText']['words'] = eval( ex + 'words' + str(i) )\n",
+      "        site[result]['allLinks']['links'] = eval( ex + 'links' + str(i) )\n",
+      "        site[result]['externalDomains']['domains'] = eval( ex + 'domains' + str(i) )\n",
+      "        \n",
+      "        site[result]['totals']['count'] = 100000\n",
+      "        \n",
+      "        site[result]['context']['contextWords'] = [{}, {}, {}]\n",
+      "        site[result]['context']['contextWords'][0]['word'] = ex + 'contextWord1'\n",
+      "        site[result]['context']['contextWords'][0]['words'] = eval( ex + 'words' + str(i) )\n",
+      "        site[result]['context']['contextWords'][1]['word'] = ex + 'contextWord2' \n",
+      "        site[result]['context']['contextWords'][1]['words'] = eval( ex + 'words' + str(i) )\n",
+      "        site[result]['context']['contextWords'][2]['word'] = ex + 'contextWord3'\n",
+      "        site[result]['context']['contextWords'][2]['words'] = eval( ex + 'words' + str(i) )\n",
+      "        \n",
+      "        site[result]['searchWords']['words'] = searchwords \n",
+      "        \n",
+      "        site[result]['synonymRings']['rings'] = wordnets\n",
+      "\n",
+      "    i = i + 1\n",
+      "\n",
+      "    #pp.pprint(site)\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 58
+     "prompt_number": 80
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "import json\n",
-      "f = open('results1.json', 'w')\n",
+      "f = open('results2.json', 'w')\n",
       "json.dump(analysis, f)\n",
       "f.close()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 59
+     "prompt_number": 81
     },
     {
      "cell_type": "code",
