hopefully not too fucked.

--- a/jsonResultsCreator.ipynb
+++ b/jsonResultsCreator.ipynb
@@ -16,7 +16,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 62
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -45,7 +45,7 @@
       "results = {'visibleText': {}, 'hiddenText': {}, 'headlineText': {},\n",
       "           'allLinks': {}, 'externalDomains': {}, 'linkText': {},\n",
       "           'searchWords': {}, 'context': {},\n",
-      "           'synonymRings': {}, 'totals': {} }\n",
+      "           'synonymRings': {}, 'totals': {}, 'selectors': {} }\n",
       "\n",
       "for site in analysis['sites']:\n",
       "    site['internalResults'] = copy.deepcopy(results)\n",
@@ -71,6 +71,7 @@
         "                                    'hiddenText': { },\n",
         "                                    'linkText': { },\n",
         "                                    'searchWords': { },\n",
+        "                                    'selectors': { },\n",
         "                                    'synonymRings': { },\n",
         "                                    'totals': { },\n",
         "                                    'visibleText': { }},\n",
@@ -81,6 +82,7 @@
         "                                    'hiddenText': { },\n",
         "                                    'linkText': { },\n",
         "                                    'searchWords': { },\n",
+        "                                    'selectors': { },\n",
         "                                    'synonymRings': { },\n",
         "                                    'totals': { },\n",
         "                                    'visibleText': { }},\n",
@@ -92,6 +94,7 @@
         "                                    'hiddenText': { },\n",
         "                                    'linkText': { },\n",
         "                                    'searchWords': { },\n",
+        "                                    'selectors': { },\n",
         "                                    'synonymRings': { },\n",
         "                                    'totals': { },\n",
         "                                    'visibleText': { }},\n",
@@ -102,6 +105,7 @@
         "                                    'hiddenText': { },\n",
         "                                    'linkText': { },\n",
         "                                    'searchWords': { },\n",
+        "                                    'selectors': { },\n",
         "                                    'synonymRings': { },\n",
         "                                    'totals': { },\n",
         "                                    'visibleText': { }},\n",
@@ -113,6 +117,7 @@
         "                                    'hiddenText': { },\n",
         "                                    'linkText': { },\n",
         "                                    'searchWords': { },\n",
+        "                                    'selectors': { },\n",
         "                                    'synonymRings': { },\n",
         "                                    'totals': { },\n",
         "                                    'visibleText': { }},\n",
@@ -123,6 +128,7 @@
         "                                    'hiddenText': { },\n",
         "                                    'linkText': { },\n",
         "                                    'searchWords': { },\n",
+        "                                    'selectors': { },\n",
         "                                    'synonymRings': { },\n",
         "                                    'totals': { },\n",
         "                                    'visibleText': { }},\n",
@@ -130,7 +136,7 @@
        ]
       }
      ],
-     "prompt_number": 78
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -161,7 +167,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 64
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -195,9 +201,17 @@
       "exdomains2 = []\n",
       "exdomains3 = []\n",
       "\n",
-      "# searchwords and wordnets don't change between external/internal\n",
+      "wordnets1 = []\n",
+      "wordnets2 = []\n",
+      "wordnets3 = []\n",
+      "\n",
+      "exwordnets1 = []\n",
+      "exwordnets2 = []\n",
+      "exwordnets3 = []\n",
+      "\n",
       "searchwords = []\n",
-      "wordnets = []\n",
+      "exsearchwords = []\n",
+      "\n",
       "\n",
       "for i in range(120):\n",
       "    \n",
@@ -257,18 +271,18 @@
       "searchWord2 = {'word': 'searchWord2', 'count': 15000, 'pages':pages, 'tags':tags}\n",
       "searchWord3 = {'word': 'searchWord3', 'count': 5000, 'pages':pages, 'tags':tags}\n",
       "searchwords = [searchWord1, searchWord2, searchWord3]\n",
+      "exsearchwords = copy.deepcopy(searchwords)\n",
+      "exsearchwords[0]['word'] = 'exsearchWord1'\n",
+      "exsearchwords[1]['word'] = 'exsearchWord2'\n",
+      "exsearchwords[2]['word'] = 'exsearchWord3'\n",
       "\n",
-      "wordNet1 = {'net': 'wordNet1', 'count': 23000, 'pages':pages, 'tags':tags}\n",
-      "wordNet2 = {'net': 'wordNet2', 'count': 15000, 'pages':pages, 'tags':tags}\n",
-      "wordNet3 = {'net': 'wordNet3', 'count': 5000, 'pages':pages, 'tags':tags}\n",
-      "wordnets = [wordNet1, wordNet2, wordNet3]\n",
       "\n",
       "#pp.pprint(exsearchwords)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 77
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -296,42 +310,86 @@
       "        site[result]['allLinks']['links'] = eval( ex + 'links' + str(i) )\n",
       "        site[result]['externalDomains']['domains'] = eval( ex + 'domains' + str(i) )\n",
       "        \n",
-      "        site[result]['totals']['count'] = 100000\n",
+      "        site[result]['totals']['count'] = 1000000\n",
       "        \n",
       "        site[result]['context']['contextWords'] = [{}, {}, {}]\n",
       "        site[result]['context']['contextWords'][0]['word'] = ex + 'contextWord1'\n",
+      "        site[result]['context']['contextWords'][0]['count'] =  30000 * i\n",
+      "        site[result]['context']['contextWords'][0]['pages'] = pages\n",
+      "        site[result]['context']['contextWords'][0]['tags'] = tags\n",
       "        site[result]['context']['contextWords'][0]['words'] = eval( ex + 'words' + str(i) )\n",
-      "        site[result]['context']['contextWords'][1]['word'] = ex + 'contextWord2' \n",
+      "        site[result]['context']['contextWords'][1]['word'] = ex + 'contextWord2'\n",
+      "        site[result]['context']['contextWords'][1]['count'] =  20000 * i\n",
+      "        site[result]['context']['contextWords'][1]['pages'] = pages\n",
+      "        site[result]['context']['contextWords'][1]['tags'] = tags\n",
       "        site[result]['context']['contextWords'][1]['words'] = eval( ex + 'words' + str(i) )\n",
       "        site[result]['context']['contextWords'][2]['word'] = ex + 'contextWord3'\n",
+      "        site[result]['context']['contextWords'][2]['count'] =  10000 * i\n",
+      "        site[result]['context']['contextWords'][2]['pages'] = pages\n",
+      "        site[result]['context']['contextWords'][2]['tags'] = tags\n",
       "        site[result]['context']['contextWords'][2]['words'] = eval( ex + 'words' + str(i) )\n",
       "        \n",
-      "        site[result]['searchWords']['words'] = searchwords \n",
+      "        site[result]['searchWords']['words'] = eval( ex + 'searchwords' )\n",
       "        \n",
-      "        site[result]['synonymRings']['rings'] = wordnets\n",
+      "        site[result]['synonymRings']['rings'] = [{}, {}, {}]\n",
+      "        site[result]['synonymRings']['rings'][0]['net'] =  ex + 'synonymRing1'\n",
+      "        site[result]['synonymRings']['rings'][0]['count'] =  30000 * i\n",
+      "        site[result]['synonymRings']['rings'][0]['words'] = eval( ex + 'words' + str(i) )\n",
+      "        site[result]['synonymRings']['rings'][0]['pages'] =  pages\n",
+      "        site[result]['synonymRings']['rings'][0]['tags'] =  tags\n",
+      "        site[result]['synonymRings']['rings'][1]['net'] =  ex + 'synonymRing2'\n",
+      "        site[result]['synonymRings']['rings'][1]['count'] =  20000 * i\n",
+      "        site[result]['synonymRings']['rings'][1]['words'] = eval( ex + 'words' + str(i) )\n",
+      "        site[result]['synonymRings']['rings'][1]['pages'] =  pages\n",
+      "        site[result]['synonymRings']['rings'][1]['tags'] =  tags\n",
+      "        site[result]['synonymRings']['rings'][2]['net'] =  ex + 'synonymRing3'\n",
+      "        site[result]['synonymRings']['rings'][2]['count'] =  10000 * i\n",
+      "        site[result]['synonymRings']['rings'][2]['words'] = eval( ex + 'words' + str(i) )\n",
+      "        site[result]['synonymRings']['rings'][2]['pages'] =  pages\n",
+      "        site[result]['synonymRings']['rings'][2]['tags'] =  tags\n",
+      "        \n",
+      "        site[result]['selectors'] = [{}, {}, {}]\n",
+      "        site[result]['selectors'][0]['name'] =  ex + 'selector1'\n",
+      "        site[result]['selectors'][0]['count'] =  30000 * i\n",
+      "        site[result]['selectors'][0]['selector'] =  '.comments'\n",
+      "        site[result]['selectors'][0]['words'] = eval( ex + 'words' + str(i) )\n",
+      "        site[result]['selectors'][0]['pages'] =  pages\n",
+      "        site[result]['selectors'][0]['tags'] =  tags\n",
+      "        site[result]['selectors'][1]['name'] =  ex + 'selector2'\n",
+      "        site[result]['selectors'][1]['count'] =  20000 * i\n",
+      "        site[result]['selectors'][1]['selector'] =  '/bookstore/book[price>35.00]/title'\n",
+      "        site[result]['selectors'][1]['words'] = eval( ex + 'words' + str(i) )\n",
+      "        site[result]['selectors'][1]['pages'] =  pages\n",
+      "        site[result]['selectors'][1]['tags'] =  tags\n",
+      "        site[result]['selectors'][2]['name'] =  ex + 'selector3'\n",
+      "        site[result]['selectors'][2]['count'] =  10000 * i\n",
+      "        site[result]['selectors'][2]['selector'] =  'alt'\n",
+      "        site[result]['selectors'][2]['words'] = eval( ex + 'words' + str(i) ) \n",
+      "        site[result]['selectors'][2]['pages'] =  pages\n",
+      "        site[result]['selectors'][2]['tags'] =  tags\n",
       "\n",
       "    i = i + 1\n",
       "\n",
-      "    #pp.pprint(site)\n"
+      "    #pp.pprint(site[result]['selectors'])\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 80
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "import json\n",
-      "f = open('results2.json', 'w')\n",
+      "f = open('results4.json', 'w')\n",
       "json.dump(analysis, f)\n",
       "f.close()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 81
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
