Summary Splashdown page complete. Added overall summary and summaries for each site.

--- a/jsonResultsCreator.ipynb
+++ b/jsonResultsCreator.ipynb
@@ -29,7 +29,8 @@
       "pp = pprint.PrettyPrinter(indent=2)\n",
       "\n",
       "analysis = {'name': 'testAnalysis', \n",
-      "            'date': '10/22/2032', \n",
+      "            'date': '10/22/2032',\n",
+      "            'time': 283,\n",
       "            'internal': True,\n",
       "            'external': True,\n",
       "            'sites': []}\n",
@@ -45,7 +46,7 @@
       "results = {'visibleText': {}, 'hiddenText': {}, 'headlineText': {},\n",
       "           'allLinks': {}, 'externalDomains': {}, 'linkText': {},\n",
       "           'searchWords': {}, 'context': {},\n",
-      "           'synonymRings': {}, 'totals': {}, 'selectors': {} }\n",
+      "           'synonymRings': {}, 'summary': {}, 'selectors': {} }\n",
       "\n",
       "for site in analysis['sites']:\n",
       "    site['internalResults'] = copy.deepcopy(results)\n",
@@ -72,8 +73,8 @@
         "                                    'linkText': { },\n",
         "                                    'searchWords': { },\n",
         "                                    'selectors': { },\n",
+        "                                    'summary': { },\n",
         "                                    'synonymRings': { },\n",
-        "                                    'totals': { },\n",
         "                                    'visibleText': { }},\n",
         "               'internalResults': { 'allLinks': { },\n",
         "                                    'context': { },\n",
@@ -83,8 +84,8 @@
         "                                    'linkText': { },\n",
         "                                    'searchWords': { },\n",
         "                                    'selectors': { },\n",
+        "                                    'summary': { },\n",
         "                                    'synonymRings': { },\n",
-        "                                    'totals': { },\n",
         "                                    'visibleText': { }},\n",
         "               'url': 'http://www.somesiteOne.com'},\n",
         "             { 'externalResults': { 'allLinks': { },\n",
@@ -95,8 +96,8 @@
         "                                    'linkText': { },\n",
         "                                    'searchWords': { },\n",
         "                                    'selectors': { },\n",
+        "                                    'summary': { },\n",
         "                                    'synonymRings': { },\n",
-        "                                    'totals': { },\n",
         "                                    'visibleText': { }},\n",
         "               'internalResults': { 'allLinks': { },\n",
         "                                    'context': { },\n",
@@ -106,8 +107,8 @@
         "                                    'linkText': { },\n",
         "                                    'searchWords': { },\n",
         "                                    'selectors': { },\n",
+        "                                    'summary': { },\n",
         "                                    'synonymRings': { },\n",
-        "                                    'totals': { },\n",
         "                                    'visibleText': { }},\n",
         "               'url': 'http://www.somesiteTwo.com'},\n",
         "             { 'externalResults': { 'allLinks': { },\n",
@@ -118,8 +119,8 @@
         "                                    'linkText': { },\n",
         "                                    'searchWords': { },\n",
         "                                    'selectors': { },\n",
+        "                                    'summary': { },\n",
         "                                    'synonymRings': { },\n",
-        "                                    'totals': { },\n",
         "                                    'visibleText': { }},\n",
         "               'internalResults': { 'allLinks': { },\n",
         "                                    'context': { },\n",
@@ -129,10 +130,11 @@
         "                                    'linkText': { },\n",
         "                                    'searchWords': { },\n",
         "                                    'selectors': { },\n",
+        "                                    'summary': { },\n",
         "                                    'synonymRings': { },\n",
-        "                                    'totals': { },\n",
         "                                    'visibleText': { }},\n",
-        "               'url': 'http://www.somesiteThree.com'}]}\n"
+        "               'url': 'http://www.somesiteThree.com'}],\n",
+        "  'time': 283}\n"
        ]
       }
      ],
@@ -209,6 +211,14 @@
       "exwordnets2 = []\n",
       "exwordnets3 = []\n",
       "\n",
+      "pagelist1 = []\n",
+      "pagelist2 = []\n",
+      "pagelist3 = []\n",
+      "\n",
+      "expagelist1 = []\n",
+      "expagelist2 = []\n",
+      "expagelist3 = []\n",
+      "\n",
       "searchwords = []\n",
       "exsearchwords = []\n",
       "\n",
@@ -265,6 +275,14 @@
       "    exdomains1.append({'domain':exdomain1, 'rank':rank, 'count':count, 'pages':pages, 'words':wordsList, 'links':links})\n",
       "    exdomains2.append({'domain':exdomain2, 'rank':rank, 'count':count, 'pages':pages, 'words':wordsList, 'links':links})\n",
       "    exdomains3.append({'domain':exdomain3, 'rank':rank, 'count':count, 'pages':pages, 'words':wordsList, 'links':links})\n",
+      "    \n",
+      "    pagelist1.append(link1)\n",
+      "    pagelist2.append(link2)\n",
+      "    pagelist3.append(link3)\n",
+      "    \n",
+      "    expagelist1.append(exlink1)\n",
+      "    expagelist2.append(exlink2)\n",
+      "    expagelist3.append(exlink3)\n",
       "\n",
       "# Create search words\n",
       "searchWord1 = {'word': 'searchWord1', 'count': 23000, 'pages':pages, 'tags':tags}\n",
@@ -301,7 +319,17 @@
       "            ex = \"\"\n",
       "        else:\n",
       "            ex = \"ex\"\n",
-      "            \n",
+      "        \n",
+      "        site[result]['summary']['pages'] = {}\n",
+      "        site[result]['summary']['pages']['count'] = 20000\n",
+      "        site[result]['summary']['pages']['list'] = eval( ex + 'pagelist' + str(i) )\n",
+      "        site[result]['summary']['words'] = {}\n",
+      "        site[result]['summary']['words']['count'] = 5000000\n",
+      "        site[result]['summary']['tags'] = {}\n",
+      "        site[result]['summary']['tags']['total'] = 45000\n",
+      "        site[result]['summary']['tags']['list'] = [{'type':'text', 'count':25000}, {'type':'links', 'count':5000}, {'type':'headlines', 'count':8000}, {'type':'image', 'count':4000}, {'type':'other', 'count':3000}]\n",
+      "        site[result]['summary']['links'] = {'internal': 4000, 'external': 1000}\n",
+      "        \n",
       "        site[result]['visibleText']['words'] = eval( ex + 'words' + str(i) )\n",
       "        site[result]['hiddenText']['words'] = eval( ex + 'words' + str(i) )\n",
       "        site[result]['headlineText']['words'] = eval( ex + 'words' + str(i) )\n",
@@ -309,8 +337,6 @@
       "        site[result]['linkText']['words'] = eval( ex + 'words' + str(i) )\n",
       "        site[result]['allLinks']['links'] = eval( ex + 'links' + str(i) )\n",
       "        site[result]['externalDomains']['domains'] = eval( ex + 'domains' + str(i) )\n",
-      "        \n",
-      "        site[result]['totals']['count'] = 1000000\n",
       "        \n",
       "        site[result]['context']['contextWords'] = [{}, {}, {}]\n",
       "        site[result]['context']['contextWords'][0]['word'] = ex + 'contextWord1'\n",
@@ -370,19 +396,19 @@
       "\n",
       "    i = i + 1\n",
       "\n",
-      "    #pp.pprint(site[result]['selectors'])\n"
+      "    #pp.pprint(site[result]['summary'])\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "import json\n",
-      "f = open('results4.json', 'w')\n",
+      "f = open('results5.json', 'w')\n",
       "json.dump(analysis, f)\n",
       "f.close()"
      ],
